# uzumibi

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-docs.yml  runn-cli-tests.yml
uzumibi-art-router/: Cargo.toml
uzumibi-art-router/src/: lib.rs  store.rs
uzumibi-art-router/src/vendor_art_tree/: keys.rs  mod.rs  node.rs  scanner.rs
uzumibi-art-router/tests/: basic.rs  wildcard.rs
uzumibi-cli/: Cargo.toml
uzumibi-cli/.wrangler/cache/: wrangler-account.json
uzumibi-cli/src/: main.rs
uzumibi-cli/templates/cloudflare/: .gitignore  Cargo.toml_  package.json  wrangler.jsonc
uzumibi-cli/templates/cloudflare/__features__/enable-external/: package.json  wrangler.jsonc
uzumibi-cli/templates/cloudflare/__features__/enable-external/src/: index.js
uzumibi-cli/templates/cloudflare/__features__/enable-external/wasm-app/: Cargo.toml_
uzumibi-cli/templates/cloudflare/__features__/enable-external/wasm-app/src/: lib.rs
uzumibi-cli/templates/cloudflare/__features__/queue/: package.json  wrangler.jsonc
uzumibi-cli/templates/cloudflare/__features__/queue/lib/: consumer.rb
uzumibi-cli/templates/cloudflare/__features__/queue/src/: index.js
uzumibi-cli/templates/cloudflare/__features__/queue/wasm-app/: Cargo.toml_  build.rs
uzumibi-cli/templates/cloudflare/__features__/queue/wasm-app/src/: lib.rs
uzumibi-cli/templates/cloudflare/public/assets/: index.html
uzumibi-cli/templates/cloudflare/src/: index.js
uzumibi-cli/templates/cloudflare/wasm-app/: Cargo.toml_  build.rs
uzumibi-cli/templates/cloudflare/wasm-app/src/: lib.rs
uzumibi-cli/templates/cloudrun/: Cargo.toml_  Dockerfile  Makefile  build.rs
uzumibi-cli/templates/cloudrun/__features__/enable-external/: Cargo.toml_  Makefile  cloudrun-env.yaml
uzumibi-cli/templates/cloudrun/__features__/queue/: Cargo.toml_  Makefile  build.rs
uzumibi-cli/templates/cloudrun/__features__/queue/lib/: consumer.rb
uzumibi-cli/templates/cloudrun/lib/: app.rb  consumer.rb
uzumibi-cli/templates/cloudrun/src/: main.rs  uzumibi.rs
uzumibi-cli/templates/fastly/: .gitignore  Cargo.toml  Cargo.toml_  fastly.toml  rust-toolchain.toml
uzumibi-cli/templates/fastly/src/: lib.rs  main.rs
uzumibi-cli/templates/serviceworker/: .gitignore  Cargo.toml_  Makefile
uzumibi-cli/templates/serviceworker/lib/: app.rb
uzumibi-cli/templates/serviceworker/public/: index.html
uzumibi-cli/templates/spin/: Cargo.toml_  spin.toml
uzumibi-cli/templates/spin/src/: lib.rs  uzumibi.rs
uzumibi-cli/templates/webworker/: Cargo.toml_  Makefile
uzumibi-cli/templates/webworker/public/: index.html  worker.js
uzumibi-cli/tests/runn/: error_cases.yml  help.yml  new_cloudflare.yml  new_cloudrun.yml  new_fastly.yml  new_serviceworker.yml  new_spin.yml  new_webworker.yml
uzumibi-cloudflare-ext/: Cargo.toml
uzumibi-cloudflare-ext/src/: lib.rs
uzumibi-docs/: book.toml
uzumibi-docs/src/: SUMMARY.md  cli-reference.md  examples.md  external-services.md  installation.md  introduction.md  overview.md  platforms.md  ruby-api.md
uzumibi-docs/src/cli-reference/: commands.md  common-workflows.md  environment-variables.md  future-commands.md  getting-help.md  installation.md  project-templates.md  troubleshooting.md  updating-the-cli.md
uzumibi-docs/src/examples/: advanced-patterns.md  basic-examples.md  error-handling.md  form-handling.md  headers-and-content-types.md  http-methods.md  json-api.md  next-steps.md  real-world-example.md  redirects.md
uzumibi-docs/src/external-services/: available-services.md  contributing.md  development-roadmap.md  next-steps.md  platform-support-matrix.md  usage-examples.md  what-are-external-service-abstractions.md
uzumibi-docs/src/installation/: creating-a-cloudflare-workers-project.md  deploying.md  editing-ruby-files.md  installing-via-cargo.md  next-steps.md  prerequisites.md  running-locally.md  troubleshooting.md
uzumibi-docs/src/overview/: architecture.md  project-structure.md  what-is-mrubyedge.md  what-is-uzumibi.md
uzumibi-docs/src/ruby-api/: best-practices.md  complete-example.md  error-handling.md  helper-functions.md  limitations.md  request-object.md  response-object.md  routing.md
uzumibi-gem/: Cargo.toml
uzumibi-gem/examples/: http_methods.rs  smoke.rs
uzumibi-gem/src/: helpers.rs  init.rs  lib.rs  request.rs  response.rs
uzumibi-google/: Cargo.toml
uzumibi-google/src/: firestore.rs  http_client.rs  jwt.rs  lib.rs  meta.rs  pubsub.rs
uzumibi-on-cloudflare-spike/: .gitignore  Cargo.toml  package-lock.json  package.json  pnpm-lock.yaml  wrangler.jsonc  wrangler.queue.jsonc  wrangler.vanilla.jsonc
uzumibi-on-cloudflare-spike/lib/: app.rb  consumer.rb
uzumibi-on-cloudflare-spike/public/assets/: hello.txt
uzumibi-on-cloudflare-spike/src/: index.js  index.queue.js  index.vanilla.js
uzumibi-on-cloudflare-spike/wasm-app/: Cargo.toml  build.rs
uzumibi-on-cloudflare-spike/wasm-app/.cargo/: config.toml
uzumibi-on-cloudflare-spike/wasm-app/src/: lib.rs
uzumibi-on-cloudrun-spike/: Cargo.toml  Dockerfile  Dockerfile.queue  README.md  cloudrun-env.yaml
uzumibi-on-cloudrun-spike/lib/: app.rb  consumer.rb
uzumibi-on-cloudrun-spike/src/: main.rs  uzumibi.rs
uzumibi-on-fastly-spike/: Cargo.toml  build.rs  fastly.toml
uzumibi-on-fastly-spike/lib/: app.rb
uzumibi-on-fastly-spike/src/: lib.rs  main.rs
uzumibi-on-serviceworker-spike/: Cargo.toml  Makefile  README.md  index.html  service-worker.js
uzumibi-on-serviceworker-spike/lib/: app.rb
uzumibi-on-serviceworker-spike/public/: index.html  service-worker.js
uzumibi-on-serviceworker-spike/src/: lib.rs
uzumibi-on-spin-spike/: Cargo.toml  spin.toml
uzumibi-on-spin-spike/lib/: app.rb
uzumibi-on-spin-spike/src/: lib.rs  uzumibi.rs
uzumibi-on-wasmcloud-spike/: Cargo.toml
uzumibi-on-wasmcloud-spike/src/: lib.rs
uzumibi-on-webworker-spike/: Cargo.toml  Makefile  README.md
uzumibi-on-webworker-spike/lib/: app.rb
uzumibi-on-webworker-spike/public/: index.html
uzumibi-on-webworker-spike/src/: lib.rs
