[workspace]
members = ["uzumibi-art-router",
    "uzumibi-cli",
    "uzumibi-gem",
    "uzumibi-on-cloudflare-spike/wasm-app",
    "uzumibi-on-cloudrun-spike",
    "uzumibi-on-fastly-spike", "uzumibi-on-serviceworker-spike",
    "uzumibi-on-spin-spike", "uzumibi-on-webworker-spike",
    #    "uzumibi-on-wasmcloud-spike",
]
resolver = "3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
strip = true
