[package]
name = "uzumibi-art-router"
version = "0.2.0"
edition = "2024"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
description = "Adaptive Radix Tree based http router for Uzumibi"
license = "BSD-3-Clause"

[dependencies]
mrubyedge = { version = ">= 1.1", features = [
    "no-wasi",
], default-features = false }

[dev-dependencies]
mrubyedge = { version = ">= 1.1", features = [
    "wasi",
], default-features = false }
rand = "0.8.4"
mruby-compiler2-sys = ">= 0.2.2"
uzumibi-gem = { path = "../uzumibi-gem" }
