[package]
name = "uzumibi-cli"
version = "0.1.0"
edition = "2024"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
description = "mruby/edge cli endpoint - run, compile to wasm, etc."
license = "BSD-3-Clause"

[dependencies]
askama = "0.15.1"
clap = { version = "4.5", features = ["derive"] }
include_dir = "0.7.4"
