[package]
name = "uzumibi-cli"
version = "0.3.0"
edition = "2024"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
description = "Uzumibi CLI tool to generate serverless mruby/edge apps"
license = "BSD-3-Clause"
include = ["**/*.rs", "Cargo.toml", "templates/**/*"]

[[bin]]
name = "uzumibi"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
include_dir = "0.7.4"
