[package]
name = "uzumibi-cloudflare-ext"
version = "0.1.0"
edition = "2024"

[dependencies]
mrubyedge = { version = ">= 1.1.10", features = [
    "no-wasi",
], default-features = false }
uzumibi-gem = ">= 0.6.0"
mrubyedge-serde-json = ">= 0.1.2"

[features]
default = ["enable-external"]
enable-external = []
queue = ["enable-external"]
