[package]
name = "uzumibi-cloudflare-ext"
version = "0.2.0"
edition = "2024"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
description = "Cloudflare Workers extension for Uzumibi (mruby/edge serverless framework)"
license = "BSD-3-Clause"

[dependencies]
mrubyedge = { version = ">= 1.1.10", features = [
    "no-wasi",
], default-features = false }
uzumibi-gem = ">= 0.6.0"
mrubyedge-serde-json = ">= 0.1.2"

[features]
default = []
enable-external = []
queue = ["enable-external"]
