[package]
name = "uzumibi-gem"
version = "0.1.0"
edition = "2024"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
description = "Uzumibi is a mruby/edge gem for serverless environment"
license = "BSD-3-Clause"

[dependencies]
mrubyedge = { version = ">= 1.0.18", features = [
    "no-wasi",
], default-features = false }

[dev-dependencies]
mruby-compiler2-sys = "0.2.2"
