[package]
name = "uzumibi-gem"
version = "0.4.0"
edition = "2024"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
description = "Uzumibi is a mruby/edge gem for serverless environment"
license = "BSD-3-Clause"

[dependencies]
mrubyedge = { version = ">= 1.1.0", features = [
    "no-wasi",
], default-features = false }
uzumibi-art-router = ">= 0.1.0"

[dev-dependencies]
mrubyedge = { version = ">= 1.1.0", features = [
    "wasi",
], default-features = false }
mruby-compiler2-sys = "0.2.2"
