[package]
name = "uzumibi-gem"
version = "0.4.1"
edition = "2024"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
description = "Uzumibi is a mruby/edge gem for serverless environment"
license = "BSD-3-Clause"

[dependencies]
mrubyedge = { version = ">= 1.1.0", features = [
    "no-wasi",
], default-features = false }
mruby-serde-json = { version = ">= 0.1.0", optional = true }
uzumibi-art-router = { path = "../uzumibi-art-router" }

[dev-dependencies]
mrubyedge = { version = ">= 1.1.0", features = [
    "wasi",
], default-features = false }
mruby-compiler2-sys = "0.2.2"

[features]
default = ["use-json"]
use-json = ["dep:mruby-serde-json"]
