[package]
name = "uzumibi-google"
version = "0.1.0-rc1"
edition = "2024"

[features]
default = []
queue = []

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = { version = "10.3.0", features = ["rsa"] }
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.22"
mrubyedge = { version = ">= 1.1.0", features = [
    "no-wasi",
], default-features = false }
mrubyedge-serde-json = { version = ">= 0.1.2", optional = true }

[dev-dependencies]
mockito = "1.4"
