[package]
name = "uzumibi-on-cloudrun-spike"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
mrubyedge = { version = ">= 1.0.18", features = [
    "no-wasi",
], default-features = false }
uzumibi-gem = "0.1.0"
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"

[build-dependencies]
mruby-compiler2-sys = ">= 0.2.2"
