[package]
name = "fastly-compute-project"
version = "0.1.0"
authors = []
edition = "2021"
# Remove this line if you want to be able to publish this crate on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fastly = "0.11.0"

[build-dependencies]
mruby-compiler2-sys = ">= 0.2.2"
