[package]
name = "uzumibi-on-fastly-spike"
version = "0.1.0"
authors = []
edition = "2021"
# Remove this line if you want to be able to publish this crate on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mrubyedge = { version = ">= 1.0.18", features = [
    "no-wasi",
], default-features = false }
uzumibi-gem = "0.3,0"
fastly = "0.11.0"
log-fastly = "0.11.12"
log = "0.4.29"
anyhow = "1.0"

[build-dependencies]
mruby-compiler2-sys = ">= 0.2.2"
