[package]
name = "uzumibi-on-serviceworker-spike"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mrubyedge = { version = ">= 1.1.8", features = [
    "no-wasi",
    "mruby-random",
], default-features = false }
uzumibi-gem = ">= 0.3.0"
mrubyedge-serde-json = ">= 0.1.0"

[build-dependencies]
mruby-compiler2-sys = ">= 0.2.2"
