[package]
name = "uzumibi-on-cloudflare-spike"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mrubyedge = { version = "1.0.15", features = [
    "no-wasi",
], default-features = false }
uzumibi-gem = { path = "../../uzumibi-gem" }

[build-dependencies]
mruby-compiler2-sys = ">= 0.2.2"
