[package]
name = "uzumibi-on-cloudflare-spike"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mrubyedge = { version = ">= 1.1.10", features = [
    "no-wasi",
    "mruby-random",
], default-features = false }
uzumibi-gem = { path = "../../uzumibi-gem" }
uzumibi-art-router = ">= 0.3.1"
uzumibi-cloudflare-ext = { path = "../../uzumibi-cloudflare-ext" }

[build-dependencies]
mruby-compiler2-sys = ">= 0.3.0"

[features]
default = ["enable-external"]
enable-external = ["uzumibi-cloudflare-ext/enable-external"]
queue = ["enable-external", "uzumibi-cloudflare-ext/queue"]
